--- a/QLTraiTreMoCoi/appsettings.json
+++ b/QLTraiTreMoCoi/appsettings.json
@@ -5,8 +5,9 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "ConnectionStrings": {
-        "Default": "Server=KYCUTO\\KYDZZ;Database=QLTraiTre;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
-    },
+  "ConnectionStrings": {
+    //"Default": "Server=KYCUTO\\KYDZZ;Database=QLTraiTre;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "Default": "Server=LAPTOP-OLG5KKTO\\MAY1;Database=QLTraiTre;User ID=sa;Password=quan26012004;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
     "AllowedHosts": "*"
 }
